nivasa-macros/tests/trybuild/validation_groups_ident.stderr
error: expected `#[groups("create", "update")]`
 --> tests/trybuild/validation_groups_ident.rs:5:5
  |
5 |     #[groups(create)]
  |     ^
